[mod] visually updated exercise list

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -21,17 +21,27 @@
     <string name="ExplanationPictureDescription">Bitte drücken Sie den \"aufnehmen\" Knopf und beginnen Sie das Bild zu beschreiben. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
     <string name="DescriptionSentenceReading">Lesen Sie einen Satz</string>
     <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
-    <string name="MinimalPairs">Minimalpaare</string>
-    <string name="MinimalPairs2">Minimalpaare2</string>
-    <string name="WordList">Wortliste</string>
-    <string name="PictureDescription">Bildbeschreibung</string>
-    <string name="SentenceReading">Sätze lesen</string>
-    <string name="SyllableRepetition">Silben wiederholen</string>
+    <string name="MinimalPairs"><u>Minimalpaare</u></string>
+    <string name="MinimalPairs2"><u>Minimalpaare 2</u></string>
+    <string name="minimalPairs2Description">In dieser Übung sollen Sie ein Wort auswählen, welches Sie vom Gerät hören werden.\nDiese Übung wird dazu verwendet um Ihre Hörfähigkeit zu testen.</string>
+    <string name="WordList"><u>Wortliste</u></string>
+    <string name="WordListDescription">In dieser Übung sollen Sie eine Reihe von unterschiedlichen Wörtern lesen.\nDiese Übung wird dazu verwendet um die Betonung in Ihrer Ausprache zu bestimmen.</string>
+    <string name="PictureDescription"><u>Bildbeschreibung</u></string>
+    <string name="PictureDescriptionDescription">In dieser Übung sollen Sie ein Bild beschreiben, welches auf dem Bildschirm zu sehen sein wird.\nDiese Übung wird dazu verwendet um die Intonation Ihrer Stimme während einem freien Vortrag zu bestimmen.</string>
+    <string name="SentenceReading"><u>Sätze lesen</u></string>
+    <string name="SentenceReadingDescription">In dieser Übung sollen Sie einen Satz lesen, welcher auf dem Bilschirm angezeigt wird.\nDiese Übung wird dazu verwendet um die Intonation Ihrer Stimme während einem durchgängigem Satz zu bestimmen.</string>
+    <string name="SyllableRepetition"><u>Wortwiederholung</u></string>
+    <string name="SyllableRepetitionDescription">In dieser Übung sollen Sie das Wort \"Pataka\" so lange wiederholen, bis ein Timer abläuft.\nDiese Übung wird dazu verwendet um Ihre Sprechrate zu bestimmen.</string>
     <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Ihre Sprechfertigkeit, sowie Ihre Fähigkeit zu Hören zu testen. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen. Die Übungen testen verschiedene Bereiche Ihrer Sprache, wie zum Beispiel die Sprechgeschwindigkeit und die Betonung, oder auch Ihre Fähigkeit zu Hören. Die App bietet eine Evaluation der Ergebnisse an, mit welcher Sie Ihren Fortschritt über die Zeit begutachten können. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen. Los gehts !</string>
     <string name="startExercise">START</string>
     <string name="back">zurück</string>
     <string name="ready">fertig</string>
     <string name="name">Name</string>
+    <string name="hearingAbility">Hörfähigkeit</string>
+    <string name="speechrate">Sprechrate</string>
+    <string name="intonation">Intonation</string>
+    <string name="MinimalPairsDescription">In dieser Übung sollen Sie Wörter wiederholen, welche Sie vom Gerät hören werden.\nDiese Übung wird dazu verwendet um die Verständlichkeit in Ihrer Ausprache zu bestimmen.</string>
+    <string name="exerciseListTitle">Willkommen zur List der Übungen!\nHier können Sie eine Übung wählen, welche Sie zusätzlich zu Ihren täglichen Übungen machen wollen.\nMachen Sie so viele Übungen wie Sie wollen um Ihre Fähigkeiten zu testen und zu verbessern!</string>
     <string name="male">Männlich</string>
     <string name="trainingSetButton">Übungseinheit\nDas ist eine Reihe an Übungen die Sie täglich machen sollten.\nStarten Sie jetzt !</string>
     <string name="female">Weiblich</string>
