--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -20,16 +20,25 @@
     <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. Press the \"recording ...\" button when you are done.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
     <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press the \"recording ...\" button when you are done.</string>
-    <string name="MinimalPairs">Minimal pairs</string>
-    <string name="MinimalPairs2">Minimal pairs 2</string>
-    <string name="WordList">Word list</string>
-    <string name="PictureDescription">Picture description</string>
-    <string name="SentenceReading">Sentence reading</string>
-    <string name="SyllableRepetition">Syllable repetition</string>
+    <string name="MinimalPairs"><u>Minimal pairs</u></string>
+    <string name="MinimalPairsDescription">In this exercise you have to repeat words, which you will hear from the device.\nThis exercise is used to measure the intelligebility of your speech.</string>
+    <string name="MinimalPairs2"><u>Minimal pairs 2</u></string>
+    <string name="minimalPairs2Description">In this exercise you have to choose a word, which you will hear from the device.\nThis exercise is used to measure your hearing ability.</string>
+    <string name="WordList"><u>Word list</u></string>
+    <string name="WordListDescription">In this exercise you have to read a list of different words.\nThis exercise is used to measure the articulation precision of your speech</string>
+    <string name="PictureDescription"><u>Picture description</u></string>
+    <string name="PictureDescriptionDescription">In this exercise you have to describe a picture, which will be shown on the screen.\nThis exercise is used to measure the intonation of your voice during free speech.</string>
+    <string name="SentenceReading"><u>Sentence reading</u></string>
+    <string name="SentenceReadingDescription">In this exercise you have to read a sentence, which will be shown on the screen.\nThis exercise is used to measure the intonation of your voice during continuous speech.</string>
+    <string name="SyllableRepetition"><u>Syllable repetition</u></string>
+    <string name="SyllableRepetitionDescription">In this exercise you have to repeat the word \"Pataka\" until a timer runs out.\nThis exercise is used to measure the rate at which you speak.</string>
     <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to measure your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, which are used to evaluate the speaking rate and the intonation of your voice as well as your hearing ability. The app will provide you with an evaluation system, where you can check your results and see your improvements over time. Now press the start button below to start creating your profile for using this app. Let´s go !</string>
     <string name="startExercise">START</string>
     <string name="back">back</string>
     <string name="ready">ready</string>
+    <string name="hearingAbility">hearing ability</string>
+    <string name="speechrate">speech rate</string>
+    <string name="intonation">intonation</string>
     <string name="save">save</string>
     <string name="mainTitle">Cochlear-Implant-Testing-App</string>
     <string name="trainingSetButton">Trainingset\nThis is a set of exercises you should complete every day.\nStart now!</string>
@@ -44,6 +53,7 @@
     <string name="smoker">Smoker</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
+    <string name="exerciseListTitle">Welcome to the list of exercises!\nHere you can choose an exercise, which you want to do additionally to your daily training session.\nDo as much exercises as you want to test and improve your abilities!</string>
     <string name="cochlearImplant">Cochlear Implant</string>
     <string name="hearingAid">Hearing Aid</string>
     <string name="typeOfImplant">typeOfImplant</string>
