[mod] changed some layout and profile aswell as folder structure

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CIT-APP</string>
+    <string name="app_name">CITA</string>
     <string name="Training_Set">Übungseinheit</string>
     <string name="Exercises">Übungen</string>
     <string name="Settings">Einstellungen</string>
@@ -12,15 +12,19 @@
     <string name="DescriptionSyllableRepetition">Wortwiederholung</string>
     <string name="ExplanationSyllableRepetition">Bitte wiederholen Sie das Wort PATAKA so oft wie möglich. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind.</string>
     <string name="DescriptionMinPairs">Wiederholen Sie das gehörte Wort</string>
-    <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie danach \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
+    <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
     <string name="DescriptionWordList">Wortwiederholung</string>
-    <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
     <string name="Listen">hören</string>
     <string name="record">aufnehmen</string>
+    <string name="trainingsetDesc">Jeden Tag bekommen Sie eine neue Einheit an Übungen die Sie absolvieren sollen. Klicken Sie hier um Ihre heutigen Übungen zu sehen!</string>
+    <string name="ExerciseListDesc">Klicken Sie hier um eine Liste aller Übungen zu sehen. Diese können Sie immer und überall individuell machen!</string>
+    <string name="dailyResultDesc">Sehen Sie sich Ihre Ergebnisse für den heutigen Tag an! Sehen Sie wie die Werte Ihrer Hörfähigkeit, Ihrer Sprech Rate und Ihrer Intonation heute waren!</string>
+    <string name="evaluationOverTimeDesc">Schauen Sie sich die Veränderung Ihrer Fähigkeiten über den Verlauf des Jahres an! Sehen Sie wie Sie sich in den letzten Monaten verbessert haben und bleiben Sie weiter am Ball!</string>
     <string name="DescriptionPictureDescription">Bildbeschreibung</string>
     <string name="ExplanationPictureDescription">Bitte drücken Sie den \"aufnehmen\" Knopf und beginnen Sie das Bild zu beschreiben. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
     <string name="DescriptionSentenceReading">Lesen Sie einen Satz</string>
-    <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind. Drücken Sie den \"aufnahme läuft ...\" Knopf um die Aufnahme zu beenden.</string>
+    <string name="ExplanationSentenceReading">Bitte lesen Sie den Satz auf dem Bildschirm. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
     <string name="MinimalPairs"><u>Minimalpaare</u></string>
     <string name="MinimalPairs2"><u>Minimalpaare 2</u></string>
     <string name="minimalPairs2Description">In dieser Übung sollen Sie ein Wort auswählen, welches Sie vom Gerät hören werden.\nDiese Übung wird dazu verwendet um Ihre Hörfähigkeit zu testen.</string>
@@ -35,13 +39,30 @@
     <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Ihre Sprechfertigkeit, sowie Ihre Fähigkeit zu Hören zu testen. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen. Die Übungen testen verschiedene Bereiche Ihrer Sprache, wie zum Beispiel die Sprechgeschwindigkeit und die Betonung, oder auch Ihre Fähigkeit zu Hören. Die App bietet eine Evaluation der Ergebnisse an, mit welcher Sie Ihren Fortschritt über die Zeit begutachten können. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen. Los gehts !</string>
     <string name="startExercise">START</string>
     <string name="back">zurück</string>
+    <string name="title_notify">CITA</string>
+    <string name="content_notify">Machen Sie Ihre täglichen Übungen um sich weiter zu verbessern!</string>
     <string name="ready">fertig</string>
     <string name="name">Name</string>
     <string name="hearingAbility">Hörfähigkeit</string>
     <string name="speechrate">Sprechrate</string>
     <string name="intonation">Intonation</string>
     <string name="MinimalPairsDescription">In dieser Übung sollen Sie Wörter wiederholen, welche Sie vom Gerät hören werden.\nDiese Übung wird dazu verwendet um die Verständlichkeit in Ihrer Ausprache zu bestimmen.</string>
-    <string name="exerciseListTitle">Willkommen zur List der Übungen!\nHier können Sie eine Übung wählen, welche Sie zusätzlich zu Ihren täglichen Übungen machen wollen.\nMachen Sie so viele Übungen wie Sie wollen um Ihre Fähigkeiten zu testen und zu verbessern!</string>
+    <string name="chooseyour">Wähle deine</string>
+    <string name="exercise">Übung!</string>
+    <string name="startimproving">Verbessere deine Leistung</string>
+    <string name="timefornotifications">Zeit für Benachrichtigungen</string>
+    <string name="now">JETZT!</string>
+    <string name="start">Beginne Dein </string>
+    <string name="training">TRAINING</string>
+    <string name="restartSession">Übungseinheit zurücksetzen</string>
+    <string name="GeneralRepetitionFinished">Übung Erledigt</string>
+    <string name="Instruction">Anleitung</string>
+    <string name="Login">Login</string>
+    <string name="Profile">Profil</string>
+    <string name="ResultsPerDay">Tägliche Ergebnisse</string>
+    <string name="ResultsPerYear">Ergebnisse</string>
+    <string name="TrainingsetFinished">Einheit beendet</string>
+    <string name="showme">und zeig was du kannst!</string>
     <string name="male">Männlich</string>
     <string name="trainingSetButton">Übungseinheit\nDas ist eine Reihe an Übungen die Sie täglich machen sollten.\nStarten Sie jetzt !</string>
     <string name="female">Weiblich</string>
@@ -51,7 +72,9 @@
     <string name="left">links</string>
     <string name="both">beides</string>
     <string name="sex">Geschlecht</string>
+    <string name="trainingsetFinishedSaying">Sie haben Ihre heutige Übungseinheit abgeschlossen!\nSehen Sie sich nun Ihre Ergebnisse an!</string>
     <string name="smoker">Raucher</string>
+    <string name="trainingsetText">Dies ist Ihre tägliche Trainingseinheit! Jede dieser Übungen misst einen anderen Teil Ihrer Fähigkeit zu hören und zu sprechen. Nachdem Sie alle Übungen beendet haben gehen Sie zum Ergebnis des Tages um zu sehen, wie Sie abgeschnitten haben! Wenn Sie mit einem Ergebnis nicht zufrieden sind, gehen Sie zu den Übungen und wiederholen Sie die Übung mit der Sie nicht zufrieden sind!\nJetzt lasst Uns anfangen! </string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
     <string name="save">speichern</string>
