--- a/CIT-APP/app/src/main/res/values-en-rUS/strings.xml
+++ b/CIT-APP/app/src/main/res/values-en-rUS/strings.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CIT-APP</string>
+    <string name="app_name">CITA</string>
     <string name="Training_Set">Training Set</string>
     <string name="Exercises">Exercises</string>
     <string name="Settings">Settings</string>
     <string name="Motivation">Good Job!</string>
     <string name="Done">Done</string>
     <string name="Again">Again</string>
+    <string name="timefornotifications">time for notifications</string>
     <string name="DescriptionMinPairs2">Select the word you heard</string>
-    <string name="ExplanationMinPairs2">Select the word you heard</string>
+    <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
     <string name="DescriptionSyllableRepetition">word repetition</string>
     <string name="ExplanationSyllableRepetition">Please repeat the word PATAKA as many times as possible. Press \"record\" when you are ready.</string>
     <string name="DescriptionMinPairs">Say the word you heard</string>
-    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to the word, then press the \"record\" button and repeat the word you heard. After you finished repeating the word, press the \"recording ...\" button to stop the recording. </string>
+    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to the word, then press \"record\" and repeat the word you heard. After you finished repeating the word, press \"recording ...\" to stop the recording. </string>
     <string name="DescriptionWordList">word repetition</string>
-    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. After you finished repeating the word, press the \"recording ...\" button to stop the recording. </string>
+    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. After you finished repeating the word, press \"recording ...\" to stop the recording. </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
     <string name="save">save</string>
+    <string name="trainingsetDesc">Each day you get a new set of different exercises to do. Click here to start your daily training set now!</string>
+    <string name="ExerciseListDesc">Click here to see the list of possible exercises you can do individually. Do them as much as you want and whenever you want!</string>
+    <string name="dailyResultDesc">Check out your daily results here! See how the values of your hearing, your intonation and your speech rate were today!</string>
+    <string name="evaluationOverTimeDesc">See how you changed over the course of time! Check out if you improved in the last months and keep your training up!</string>
+    <string name="GeneralRepetitionFinished">Exercise Finished</string>
+    <string name="trainingsetFinishedSaying">You finished your training session for today!\nNow go and take a look at your results!</string>
     <string name="DescriptionPictureDescription">picture description</string>
     <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. When you are finished press the \"recording ...\" button.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
@@ -37,6 +44,22 @@
    <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to measure your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, which are used to evaluate the speaking rate and the intonation of your voice as well as your hearing ability. The app will provide you with an evaluation system, where you can check your results and see your improvements over time. Now press the start button below to start creating your profile for using this app. Let´s go !</string>
     <string name="startExercise">START</string>
     <string name="name">name</string>
+    <string name="chooseyour">Choose your</string>
+    <string name="exercise">EXERCISE!</string>
+    <string name="startimproving">Start improving</string>
+    <string name="now">NOW!</string>
+    <string name="Instruction">Instruction</string>
+    <string name="restartSession">restart session</string>
+    <string name="Login">Login</string>
+    <string name="title_notify">CITA</string>
+    <string name="content_notify">Do your daily exercises now to keep improving!</string>
+    <string name="Profile">Profile</string>
+    <string name="ResultsPerDay">Daily Results</string>
+    <string name="ResultsPerYear">Total Results</string>
+    <string name="TrainingsetFinished">Session Finished</string>
+    <string name="start">Start your </string>
+    <string name="training">SESSION</string>
+    <string name="showme">and show me what you`ve got!</string>
     <string name="birthdate">birthdate</string>
     <string name="hearingAbility">hearing ability</string>
     <string name="speechrate">speech rate</string>
@@ -45,8 +68,8 @@
     <string name="ready">ready</string>
     <string name="trainingSetButton">Trainingset\nThis is a set of exercises you should complete every day.\nStart now!</string>
     <string name="sex">sex</string>
-    <string name="exerciseListTitle">Welcome to the list of exercises!\nHere you can choose an exercise, which you want to do additionally to your daily training session.\nDo as much exercises as you want to test and improve your abilities!</string>
     <string name="male">male</string>
+    <string name="trainingsetText">This is the trainingset, which you should complete each day! All exercises are chosen to measure a different part of your ability to hear and speak. After you finished all the exercises go ahead and take a look at the results of the day to see your performance! If you are not happy go to exercises and choose one to improve a specific result! \n Now let`s get started! </string>
     <string name="female">female</string>
     <string name="divers">divers</string>
     <string name="right">right</string>
