--- a/CIT-APP/app/src/main/res/values/strings.xml
+++ b/CIT-APP/app/src/main/res/values/strings.xml
@@ -1,25 +1,32 @@
 <resources>
-    <string name="app_name">CIT-APP</string>
+    <string name="app_name">CITA</string>
     <string name="Training_Set">Training Set</string>
     <string name="Exercises">Exercises</string>
     <string name="Settings">Settings</string>
     <string name="Motivation">Good Job!</string>
     <string name="Done">Done</string>
     <string name="Again">Again</string>
+    <string name="timefornotifications">time for notifications</string>
     <string name="DescriptionMinPairs2">Select the word you heard</string>
     <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
     <string name="DescriptionSyllableRepetition">word repetition</string>
     <string name="ExplanationSyllableRepetition">Please repeat the word PATAKA as many times as possible. Press \"record\" when you are ready.</string>
     <string name="DescriptionMinPairs">Say the word you heard</string>
-    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to a word, then press the \"record\" button and repeat the word you heard. Press the \"recording ...\" button when you are done. </string>
+    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to a word, then press the \"record\" button and repeat the word you heard. Press \"recording ...\" when you are done. </string>
     <string name="DescriptionWordList">word repetition</string>
-    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. Press the \"recording ...\" button when you are done. </string>
+    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. Press \"recording ...\" when you are done. </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
+    <string name="title_notify">CITA</string>
+    <string name="trainingsetDesc">Each day you get a new set of different exercises to do. Click here to start your daily training set now!</string>
+    <string name="ExerciseListDesc">Click here to see the list of possible exercises you can do individually. Do them as much as you want and whenever you want!</string>
+    <string name="dailyResultDesc">Check out your daily results here! See how the values of your hearing, your intonation and your speech rate were today!</string>
+    <string name="evaluationOverTimeDesc">See how you changed over the course of time! Check out if you improved in the last months and keep your training up!</string>
+    <string name="content_notify">Do your daily exercises now to keep improving!</string>
     <string name="DescriptionPictureDescription">picture description</string>
     <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. Press the \"recording ...\" button when you are done.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
-    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press the \"recording ...\" button when you are done.</string>
+    <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. Press \"recording ...\" when you are done.</string>
     <string name="MinimalPairs"><u>Minimal pairs</u></string>
     <string name="MinimalPairsDescription">In this exercise you have to repeat words, which you will hear from the device.\nThis exercise is used to measure the intelligebility of your speech.</string>
     <string name="MinimalPairs2"><u>Minimal pairs 2</u></string>
@@ -35,6 +42,7 @@
     <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to measure your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, which are used to evaluate the speaking rate and the intonation of your voice as well as your hearing ability. The app will provide you with an evaluation system, where you can check your results and see your improvements over time. Now press the start button below to start creating your profile for using this app. Let´s go !</string>
     <string name="startExercise">START</string>
     <string name="back">back</string>
+    <string name="restartSession">restart session</string>
     <string name="ready">ready</string>
     <string name="hearingAbility">hearing ability</string>
     <string name="speechrate">speech rate</string>
@@ -53,12 +61,19 @@
     <string name="smoker">Smoker</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
-    <string name="exerciseListTitle">Welcome to the list of exercises!\nHere you can choose an exercise, which you want to do additionally to your daily training session.\nDo as much exercises as you want to test and improve your abilities!</string>
+    <string name="chooseyour">Choose your</string>
+    <string name="exercise">EXERCISE!</string>
+    <string name="startimproving">Start improving</string>
+    <string name="now">NOW!</string>
+    <string name="start">Start your </string>
+    <string name="training">SESSION</string>
+    <string name="showme">and show me what you`ve got!</string>
     <string name="cochlearImplant">Cochlear Implant</string>
     <string name="hearingAid">Hearing Aid</string>
     <string name="typeOfImplant">typeOfImplant</string>
     <string name="sideOfImplant">side of implant</string>
     <string name="birthdate">birthdate</string>
+    <string name="trainingsetText">This is the trainingset, which you should complete each day! All exercises are chosen to measure a different part of your ability to hear and speak. After you finished all the exercises go ahead and take a look at the results of the day to see your performance! If you are not happy go to exercises and choose one to improve a specific result! \n Now let`s get started! </string>
     <string name="phoneNumber">phone number</string>
     <string name="recording">recording ...</string>
     <string name="trainingsetTitle">Trainingset</string>
@@ -68,8 +83,16 @@
     <string name="dailyEvaluation">results/day</string>
     <string name="evaluationOverTime">results/year</string>
     <string name="mainPage">mainpage</string>
+    <string name="GeneralRepetitionFinished">Exercise Finished</string>
+    <string name="Instruction">Instruction</string>
+    <string name="Login">Login</string>
+    <string name="Profile">Profile</string>
+    <string name="ResultsPerDay">Daily Results</string>
+    <string name="ResultsPerYear">Total Results</string>
+    <string name="TrainingsetFinished">Session Finished</string>
     <string name="exerciseList">exercises</string>
     <string name="settings">Settings</string>
+    <string name="trainingsetFinishedSaying">You finished your training session for today!\nNow go and take a look at your results!</string>
     <string-array name="Sentences">
         <item>Peter spielt auf der Strasse</item>
         <item>Der Vater liest ein Buch</item>
