--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -52,6 +52,7 @@
     <string name="startimproving">Verbessere deine Leistung</string>
     <string name="timefornotifications">Zeit für Benachrichtigungen</string>
     <string name="now">JETZT!</string>
+    <string name="restartSessionHelp">Sobald der Knopf \"Übungseinheit zurücksetzen\" gedrückt wurde und die Übungen der täglichen Einheit noch nicht beendet wurden, werden die Übungen in der täglichen Einheit geändert.\nSollte die Einheit schon erledigt sein, wird eine neue tägliche Einheit von Übungen erstellt, welche im Hauptmenü über \"Tägliche Einheit\" eingesehen werden kann!</string>
     <string name="start">Beginne Dein </string>
     <string name="training">TRAINING</string>
     <string name="restartSession">Übungseinheit zurücksetzen</string>
@@ -59,6 +60,7 @@
     <string name="Instruction">Anleitung</string>
     <string name="Login">Login</string>
     <string name="Profile">Profil</string>
+    <string name="home">Startseite</string>
     <string name="ResultsPerDay">Tägliche Ergebnisse</string>
     <string name="ResultsPerYear">Ergebnisse</string>
     <string name="TrainingsetFinished">Einheit beendet</string>
