[mod] new pictures, measurements, activities and more

--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -8,15 +8,27 @@
     <string name="Done">Fertig</string>
     <string name="Again">Nochmal</string>
     <string name="DescriptionMinPairs2">Wählen Sie das gehörte Wort aus</string>
-    <string name="ExplanationMinPairs2">Drücken Sie den \"hören\" Knopf um ein Wort zu hören. Drücken Sie dann den Knopf mit dem Wort, dass Sie gehört haben.</string>
+    <string name="ExplanationMinPairs2">Drücken Sie den \"hören\" Knopf um ein Wort zu hören. Drücken Sie dann den Knopf mit dem Wort, dass Sie gehört haben. Achtung: Es können Wörter enthalten sein, die keine Bedeutung haben wie z.B. Hange.</string>
+    <string name="permissions">"Um diese Applikation nutzen zu können müssen sie zustimmen dass diese App Ihr Mikrofon, Ihre Kamera und Zugriff auf Ihren Speicher bekommt"</string>
     <string name="DescriptionSyllableRepetition">Wortwiederholung</string>
-    <string name="ExplanationSyllableRepetition">Bitte wiederholen Sie das Wort PATAKA so oft wie möglich. Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind.</string>
+    <string name="ExplanationSyllableRepetition1">Bitte wiederholen Sie\u0020</string>
+    <string name="ExplanationSyllableRepetition2">\u0020so oft wie möglich innerhalb von fünf Sekunden. Zum beispiel so: </string>
+    <string name="ExamplePataka">pataka, pataka, pataka, pataka, ..., pataka.</string>
+    <string name="ExamplePa">pa, pa, pa, pa, ..., pa.</string>
+    <string name="ExampleTa">ta, ta, ta, ta, ..., ta.</string>
+    <string name="ExampleKa">ka, ka, ka, ka, ..., ka.</string>
+    <string name="ExamplePetaka">petaka, petaka, petaka, petaka, ..., petaka.</string>
+    <string name="ExamplePakata">pakata, pakata, pakata, pakata, ..., pakata.</string>
+    <string name="ExampleSifaschu">sifaschu, sifaschu, sifaschu, sifaschu, ..., sifaschu.</string>
+    <string name="ExplanationSyllableRepetition3">\u0020Drücken Sie auf \"aufnehmen\" wenn Sie bereit sind um den Countdown zu starten. Der Countdown beendet die Übung automatisch nach fünf Sekunden.</string>
     <string name="DescriptionMinPairs">Wiederholen Sie das gehörte Wort</string>
-    <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
+    <string name="ExplanationMinPairs">Drücken Sie \"hören\" um ein Wort zu hören, drücken Sie dann \"aufnehmen\" und wiederholen Sie das gehörte Wort. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden. Achtung: Es können Wörter enthalten sein, die keine Bedeutung haben wie z.B. Hange.</string>
     <string name="DescriptionWordList">Wortwiederholung</string>
     <string name="ExplanationWordList">Drücken Sie den \"aufnehmen\" Knopf und sagen Sie danach das Wort, welches in der Mitte zu sehen is. Drücken Sie \"aufnahme läuft ...\" um die Aufnahme zu beenden.</string>
     <string name="Listen">hören</string>
     <string name="record">aufnehmen</string>
+    <string name="questionDialog">"Wie möchten Sie Ihr Bild setzen ?"</string>
+    <string name="dialogTitle">"Bilder hochladen Option"</string>
     <string name="trainingsetDesc">Jeden Tag bekommen Sie eine neue Einheit an Übungen die Sie absolvieren sollen. Klicken Sie hier um Ihre heutigen Übungen zu sehen!</string>
     <string name="ExerciseListDesc">Klicken Sie hier um eine Liste aller Übungen zu sehen. Diese können Sie immer und überall individuell machen!</string>
     <string name="dailyResultDesc">Sehen Sie sich Ihre Ergebnisse für den heutigen Tag an! Sehen Sie wie die Werte Ihrer Hörfähigkeit, Ihrer Sprech Rate und Ihrer Intonation heute waren!</string>
@@ -36,13 +48,31 @@
     <string name="SentenceReadingDescription">In dieser Übung sollen Sie einen Satz lesen, welcher auf dem Bilschirm angezeigt wird.\nDiese Übung wird dazu verwendet um die Intonation Ihrer Stimme während einem durchgängigem Satz zu bestimmen.</string>
     <string name="SyllableRepetition"><u>Wortwiederholung</u></string>
     <string name="SyllableRepetitionDescription">In dieser Übung sollen Sie das Wort \"Pataka\" so lange wiederholen, bis ein Timer abläuft.\nDiese Übung wird dazu verwendet um Ihre Sprechrate zu bestimmen.</string>
-    <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Ihre Sprechfertigkeit, sowie Ihre Fähigkeit zu Hören zu testen. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen. Die Übungen testen verschiedene Bereiche Ihrer Sprache, wie zum Beispiel die Sprechgeschwindigkeit und die Betonung, oder auch Ihre Fähigkeit zu Hören. Die App bietet eine Evaluation der Ergebnisse an, mit welcher Sie Ihren Fortschritt über die Zeit begutachten können. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen. Los gehts !</string>
+    <string name="needed">Berechtigung erforderlich</string>
+    <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Daten über Ihre Sprache und Ihr Hörvermögen zu sammeln und auszuwerten. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen, nach der Sie Ihre Ergebnisse ansehen können. Außerdem haben Sie die Möglichkeit sich ein Profil zu erstellen in dem Sie wichtige Daten über sich speichern können. Um all das zu verwirklichen benötigt CITA den Zugriff auf Ihr Mikrofon, Ihren Speicher und auf Ihre Kamera. Um das zu erlauben, drücken Sie den Start Knopf und im dann erscheinenden Popup fenster auf Zulassen. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen.\nLos gehts !</string>
     <string name="startExercise">START</string>
     <string name="back">zurück</string>
+    <string name="messageEmpty">Sie müssen etwas sagen!</string>
+    <string name="ExerciseDone">Gut gemacht! Wenn Sie die Übung wiederholen wollen drücken Sie bitte \"Nochmal\". Wenn Sie mit der Übungseinheit fortfahren möchten drücken Sie bitte \"Weiter\".</string>
+    <string name="listenNotPressed">Sie müssen erst den \"Hören\" Knopf drücken bevor Sie das gehörte Wort wiederholen können!</string>
     <string name="title_notify">CITA</string>
     <string name="content_notify">Machen Sie Ihre täglichen Übungen um sich weiter zu verbessern!</string>
+    <string name="trainingsetExerciseFinishedTitle">Übung beendet</string>
     <string name="ready">fertig</string>
+    <string name="Next">Weiter</string>
+    <string name="messageAgain">Etwas ist schief gelaufen bitte versuchen Sie es nochmal!</string>
     <string name="name">Name</string>
+    <string name="correct">Ergebnis</string>
+    <string name="correctWord">Korrektes Wort</string>
+    <string name="yourWord">Ihr Wort</string>
+    <string name="pataka">das Wort PATAKA</string>
+    <string name="petaka">das Wort PETAKA</string>
+    <string name="pakata">das Wort PAKATA</string>
+    <string name="pa">die Silbe PA</string>
+    <string name="ta">die Silbe TA</string>
+    <string name="ka">die Silbe KA</string>
+    <string name="sifaschu">das Wort SIFASCHU</string>
+    <string name="play">Abspielen</string>
     <string name="hearingAbility">Hörfähigkeit</string>
     <string name="speechrate">Sprechrate</string>
     <string name="intonation">Intonation</string>
@@ -72,8 +102,17 @@
     <string name="divers">Divers</string>
     <string name="right">rechts</string>
     <string name="left">links</string>
-    <string name="both">beides</string>
+    <string name="both">bei-\ndes</string>
+    <string name="none">kei-\nnes</string>
     <string name="sex">Geschlecht</string>
+    <string name="pitch_mean">Pitch</string>
+    <string name="pitchText">Gesunde männliche Testperson kleinster Wert: 85.0\nGesunde männliche Testperson größter Wert: 212.5\nGesunde männliche Testperson mittlerer Wert: 120.0\nIhr Wert: </string>
+    <string name="intonationText">Gesunde männliche Testperson kleinster Wert: 5.5\nGesunde männliche Testperson größter Wert: 65.1\nGesunde männliche Testperson mittlerer Wert: 17.5\nIhr Wert: </string>
+    <string name="speechRateText">Gesunde männliche Testperson kleinster Wert: 0.5\nGesunde männliche Testperson größter Wert: 3.2\nGesunde männliche Testperson mittlerer Wert: 1.3\nIhr Wert: </string>
+    <string name="pitchTextF">Gesunde weibliche Testperson kleinster Wert: 107.0\nGesunde weibliche Testperson größter Wert: 265.7\nGesunde Testperson mittlerer Wert: 190.0\nIhr Wert: </string>
+    <string name="intonationTextF">Gesunde weibliche Testperson kleinster Wert: 6.8\nGesunde weibliche Testperson größter Wert: 108.9\nGesunde weibliche Testperson mittlerer Wert: 31.4\nIhr Wert: </string>
+    <string name="speechRateTextF">Gesunde weibliche Testperson kleinster Wert: 0.1\nGesunde weibliche Testperson größter Wert: 3.3\nGesunde weibliche Testperson mittlerer Wert: 1.2\nIhr Wert: </string>
+    <string name="hearingAbilityText">Gesunde Testperson kleinster Wert: 100,0%\nGesunde Testperson größter Wert: 100,0%\nGesunde Testperson mittlerer Wert: 100,0%\nIhr Wert: </string>
     <string name="trainingsetFinishedSaying">Sie haben Ihre heutige Übungseinheit abgeschlossen!\nSehen Sie sich nun Ihre Ergebnisse an!</string>
     <string name="smoker">Raucher</string>
     <string name="trainingsetText">Dies ist Ihre tägliche Trainingseinheit! Jede dieser Übungen misst einen anderen Teil Ihrer Fähigkeit zu hören und zu sprechen. Nachdem Sie alle Übungen beendet haben gehen Sie zum Ergebnis des Tages um zu sehen, wie Sie abgeschnitten haben! Wenn Sie mit einem Ergebnis nicht zufrieden sind, gehen Sie zu den Übungen und wiederholen Sie die Übung mit der Sie nicht zufrieden sind!\nJetzt lasst Uns anfangen! </string>
