--- a/CIT-APP/app/src/main/res/values-en-rUS/strings.xml
+++ b/CIT-APP/app/src/main/res/values-en-rUS/strings.xml
@@ -9,17 +9,26 @@
     <string name="Again">Again</string>
     <string name="timefornotifications">time for notifications</string>
     <string name="DescriptionMinPairs2">Select the word you heard</string>
-    <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard.</string>
+    <string name="ExplanationMinPairs2">Press the \"listen\" button to hear a word. Then click the button with the name of the word you heard. Attention: The exercise may contain words, which make no sense.</string>
     <string name="DescriptionSyllableRepetition">word repetition</string>
-    <string name="ExplanationSyllableRepetition">Please repeat the word PATAKA as many times as possible. Press \"record\" when you are ready.</string>
     <string name="DescriptionMinPairs">Say the word you heard</string>
-    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to the word, then press \"record\" and repeat the word you heard. After you finished repeating the word, press \"recording ...\" to stop the recording. </string>
+    <string name="ExplanationMinPairs">Press the \"listen\" button to listen to the word, then press \"record\" and repeat the word you heard. After you finished repeating the word, press \"recording ...\" to stop the recording. Attention: The exercise may contain words, which make no sense.</string>
     <string name="DescriptionWordList">word repetition</string>
-    <string name="ExplanationWordList">Press the \"record\" button, then repeat the word shown in the middle. After you finished repeating the word, press \"recording ...\" to stop the recording. </string>
+    <string name="ExplanationWordList">Press the \"record\" button, then read the word shown in the middle of the screen out loud. After you finished repeating the word, press \"recording ...\" to stop the recording. </string>
     <string name="Listen">listen</string>
     <string name="record">record</string>
     <string name="save">save</string>
-    <string name="home">Title screen</string>
+    <string name="none">none</string>
+    <string name="home">Home screen</string>
+    <string name="permissions">"To use this application, the permission to record your voice, to write to your external storage and to use your camera is needed"</string>
+    <string name="pitch_mean">pitch_mean</string>
+    <string name="pitchTextF">healthy female control person minimal value: 107.0\nhealthy female control person maximal value: 265.7\nhealthy female control mean value: 190.0\nyour value: </string>
+    <string name="intonationTextF">healthy female control person minimal value: 6.8\nhealthy female control person maximal value: 108.9\nhealthy female control mean value: 31.4\nyour value: </string>
+    <string name="speechRateTextF">healthy female control person minimal value: 0.1\nhealthy female control person maximal value: 3.3\nhealthy female control mean value: 1.2\nyour value: </string>
+    <string name="pitchText">healthy male control person minimal value: 85.0\nhealthy male control person maximal value: 212.5\nhealthy male control mean value: 120.0\nyour value: </string>
+    <string name="intonationText">healthy male control person minimal value: 5.5\nhealthy male control person maximal value: 65.1\nhealthy male control mean value: 17.5\nyour value: </string>
+    <string name="speechRateText">healthy male control person minimal value: 0.5\nhealthy male control person maximal value: 3.2\nhealthy male control mean value: 1.3\nyour value: </string>
+    <string name="hearingAbilityText">healthy control person minimal value: 100,0%\nhealthy control person maximal value: 100,0%\nhealthy control mean value: 100,0%\nyour value: </string>
     <string name="restartSessionHelp">When the restart session button is pressed and a training session is available, the exercises in the session will get changed.\nIf the training session has already been done, new exercises will appear and a new training session can be done!</string>
     <string name="trainingsetDesc">Each day you get a new set of different exercises to do. Click here to start your daily training set now!</string>
     <string name="ExerciseListDesc">Click here to see the list of possible exercises you can do individually. Do them as much as you want and whenever you want!</string>
@@ -28,7 +37,7 @@
     <string name="GeneralRepetitionFinished">Exercise Finished</string>
     <string name="trainingsetFinishedSaying">You finished your training session for today!\nNow go and take a look at your results!</string>
     <string name="DescriptionPictureDescription">picture description</string>
-    <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture below. When you are finished press the \"recording ...\" button.</string>
+    <string name="ExplanationPictureDescription">Please press the \"record\" button and then start describing the picture on the screen. When you are finished press the \"recording ...\" button.</string>
     <string name="DescriptionSentenceReading">Read the sentence</string>
     <string name="ExplanationSentenceReading">Please read the sentence on the screen. Press the \"record\" button when you are ready. When you are finished press the \"recording ...\" button.</string>
     <string name="MinimalPairs"><u>Minimal pairs</u></string>
@@ -43,16 +52,29 @@
     <string name="SentenceReadingDescription">In this exercise you have to read a sentence, which will be shown on the screen.\nThis exercise is used to measure the intonation of your voice during continuous speech.</string>
     <string name="SyllableRepetition"><u>Syllable repetition</u></string>
     <string name="SyllableRepetitionDescription">In this exercise you have to repeat the word \"Pataka\" until a timer runs out.\nThis exercise is used to measure the rate at which you speak.</string>
-   <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to measure your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, which are used to evaluate the speaking rate and the intonation of your voice as well as your hearing ability. The app will provide you with an evaluation system, where you can check your results and see your improvements over time. Now press the start button below to start creating your profile for using this app. Let´s go !</string>
+    <string name="needed">Permission needed</string>
+    <string name="LoginScreenInformation">Welcome to CITA, the Cochlear-Implant-Testing-App. This Application is used to collect and evaluate data about your speaking ability as well as your hearing ability. To do so you have to complete a set of exercises every day, after which you can take a look at your results. The app will also provide you with a profile, where you can save important data about you. To do all of this CITA needs access to your microphone, your storage and your camera. To allow all of this press the start button below and then allow in the popup windows. Now press the start button below to start creating your profile for using this app.\nLet´s go !</string>
     <string name="startExercise">START</string>
+    <string name="listenNotPressed">You have to press the \"listen\" button before you can repeat the word you heard!</string>
     <string name="name">name</string>
+    <string name="messageEmpty">You have to say something!</string>
+    <string name="ExerciseDone">Good Job! If you want to repeat the exercise please press \"Again\". If you want to continue the training session press \"Next\".</string>
     <string name="chooseyour">Choose your</string>
     <string name="exercise">EXERCISE!</string>
     <string name="startimproving">Start improving</string>
     <string name="now">NOW!</string>
+    <string name="Next">Next</string>
+    <string name="messageAgain">something went wrong please try again!</string>
+    <string name="trainingsetExerciseFinishedTitle">Exercise Finished</string>
+    <string name="questionDialog">"How do you want to set your picture?"</string>
+    <string name="dialogTitle">"Upload Pictures Option"</string>
     <string name="Instruction">Instruction</string>
     <string name="restartSession">restart session</string>
     <string name="Login">Login</string>
+    <string name="correct">result</string>
+    <string name="correctWord">correct word</string>
+    <string name="yourWord">your word</string>
+    <string name="play">play</string>
     <string name="title_notify">CITA</string>
     <string name="content_notify">Do your daily exercises now to keep improving!</string>
     <string name="Profile">Profile</string>
@@ -68,9 +90,26 @@
     <string name="intonation">intonation</string>
     <string name="back">back</string>
     <string name="ready">ready</string>
+    <string name="ExplanationSyllableRepetition1">Please repeat\u0020</string>
+    <string name="ExplanationSyllableRepetition2">\u0020as many times as possible in five seconds. For example like that:\u0020</string>
+    <string name="ExamplePataka"> pataka, pataka, pataka, pataka, ..., pataka.</string>
+    <string name="ExamplePa"> pa, pa, pa, pa, ..., pa.</string>
+    <string name="ExampleTa"> ta, ta, ta, ta, ..., ta.</string>
+    <string name="ExampleKa"> ka, ka, ka, ka, ..., ka.</string>
+    <string name="ExamplePetaka"> petaka, petaka, petaka, petaka, ..., petaka.</string>
+    <string name="ExamplePakata"> pakata, pakata, pakata, pakata, ..., pakata.</string>
+    <string name="ExampleSifaschu"> sifaschu, sifaschu, sifaschu, sifaschu, ..., sifaschu.</string>
+    <string name="ExplanationSyllableRepetition3">\u0020Press \"record\" when you are ready to start the timer. The timer automatically stops the exercise after five seconds.</string>
     <string name="trainingSetButton">Trainingset\nThis is a set of exercises you should complete every day.\nStart now!</string>
     <string name="sex">sex</string>
     <string name="male">male</string>
+    <string name="pataka">the word PATAKA</string>
+    <string name="petaka">the word PETAKA</string>
+    <string name="pakata">the word PAKATA</string>
+    <string name="pa">the syllable PA</string>
+    <string name="ta">the syllable TA</string>
+    <string name="ka">the syllable KA</string>
+    <string name="sifaschu">the word SIFASCHU</string>
     <string name="trainingsetText">This is the trainingset, which you should complete each day! All exercises are chosen to measure a different part of your ability to hear and speak. After you finished all the exercises go ahead and take a look at the results of the day to see your performance! If you are not happy go to exercises and choose one to improve a specific result! \n Now let`s get started! </string>
     <string name="female">female</string>
     <string name="divers">divers</string>
@@ -83,7 +122,7 @@
     <string name="no">no</string>
     <string name="cochlearImplant">Cochlear Implant</string>
     <string name="hearingAid">Hearing Aid</string>
-    <string name="typeOfImplant">typeOfImplant</string>
+    <string name="typeOfImplant">type of implant</string>
     <string name="sideOfImplant">side of implant</string>
     <string name="phoneNumber">phone number</string>
     <string name="recording">recording ...</string>
