--- a/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
+++ b/CIT-APP/app/src/main/res/values-de-rDE/strings.xml
@@ -47,7 +47,7 @@
     <string name="SentenceReading"><u>Sätze lesen</u></string>
     <string name="SentenceReadingDescription">In dieser Übung sollen Sie einen Satz lesen, welcher auf dem Bilschirm angezeigt wird.\nDiese Übung wird dazu verwendet um die Intonation Ihrer Stimme während einem durchgängigem Satz zu bestimmen.</string>
     <string name="SyllableRepetition"><u>Wortwiederholung</u></string>
-    <string name="SyllableRepetitionDescription">In dieser Übung sollen Sie das Wort \"Pataka\" so lange wiederholen, bis ein Timer abläuft.\nDiese Übung wird dazu verwendet um Ihre Sprechrate zu bestimmen.</string>
+    <string name="SyllableRepetitionDescription">In dieser Übung sollen Sie Wörter oder Silben so lange wiederholen, bis ein Timer abläuft.\nDiese Übung wird dazu verwendet um Ihre Sprechrate zu bestimmen.</string>
     <string name="needed">Berechtigung erforderlich</string>
     <string name="LoginScreenInformation">Wilkommen bei CITA, der Cochlear-Implantat-Test-App. Diese App ist dazu da, um Daten über Ihre Sprache und Ihr Hörvermögen zu sammeln und auszuwerten. Um Dies zu ermöglichen, müssen Sie eine tägliche Einheit von Übungen abschließen, nach der Sie Ihre Ergebnisse ansehen können. Außerdem haben Sie die Möglichkeit sich ein Profil zu erstellen in dem Sie wichtige Daten über sich speichern können. Um all das zu verwirklichen benötigt CITA den Zugriff auf Ihr Mikrofon, Ihren Speicher und auf Ihre Kamera. Um das zu erlauben, drücken Sie den Start Knopf und im dann erscheinenden Popup fenster auf Zulassen. Drücken Sie nun den Start Knopf um mit der Erstellung Ihres Profils zu beginnen.\nLos gehts !</string>
     <string name="startExercise">START</string>
